# PiFotoFrame

./: .envrc  .gitignore  CMakeLists.txt  PiFotoFrame.pro  README.md  build_qt.sh
Data/: PiFotoFrame.conf.template
res/: TempMaxMin.qml  TextContainer.qml  WeatherIcon.qml  WeatherWidget.qml  main.qml  qml.qrc
src/: CMakeLists.txt  Globals.cpp  Globals.hpp  ImageProvider.cpp  Photo.cpp  Photo.hpp  Weather.cpp  Weather.hpp  main.cpp
